fix: Spacing contol styling

--- a/src/components/typography/editor.lazy.scss
+++ b/src/components/typography/editor.lazy.scss
@@ -5,7 +5,7 @@
 }
 
 .components-button-group.components-tab-panel__tabs {
-	padding-right: 4px;
+	padding-right: 26px;
 }
 
 .components-button-group.uagb-size-type-field {
@@ -50,12 +50,6 @@ label.uag-typography-font-family-subset-label {
 .block-editor-block-inspector .components-base-control:last-child {
 	margin-bottom: 0px;
 }
-.uagb-typography-advanced {
-	.components-select-control {
-		height: auto;
-	}
-	.components-base-control {
-		margin-top: 16px;
-		margin-bottom: 0;
-	}
+.uagb-typography-advanced .components-select-control {
+	height: auto;
 }
